# home

./: .beardist.json  .earthlyignore  .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  docker-bake.hcl  multify.sh  pnpm-lock.yaml  repack.sh  rust-toolchain.toml
.cargo/: config.toml
.config/: hakari.toml
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
.zed/: settings.json
configs/: spoof.json
crates-outside-workspace/rubicon-exports/: Cargo.toml
crates-outside-workspace/rubicon-exports/src/: lib.rs
crates/api/: Cargo.toml
crates/cdn/: Cargo.toml
crates/clap/: Cargo.toml
crates/closest/: Cargo.toml
crates/compress/: Cargo.toml
crates/config/: Cargo.toml
crates/config-types/: Cargo.toml
crates/config-types/src/: lib.rs
crates/conflux/: Cargo.toml
crates/conflux/src/: av.rs  derivations.rs  lib.rs
crates/content-type/: Cargo.toml
crates/credentials/: Cargo.toml
crates/credentials/src/: lib.rs
crates/cub/: Cargo.toml
crates/cub-types/: Cargo.toml
crates/cub-types/src/: lib.rs
crates/derivations/: Cargo.toml
crates/derivations/src/: lib.rs
crates/doctor/: Cargo.toml
crates/dumbcache/: Cargo.toml
crates/errhandling/: Cargo.toml
crates/fs/: Cargo.toml
crates/github/: Cargo.toml
crates/hattip/: Cargo.toml
crates/highlight/: Cargo.toml
crates/highlight-types/: Cargo.toml
crates/highlight-types/src/: lib.rs
crates/home/: Cargo.toml
crates/home/src/: dev_setup.rs  main.rs
crates/home/src/scaffold/content/: _index.md
crates/home/src/scaffold/src/: bundle.ts  main.scss
crates/home/src/scaffold/templates/: page.html.jinja
crates/htmlrewrite/: Cargo.toml
crates/httpclient/: Cargo.toml
crates/image/: Cargo.toml
crates/image-types/: Cargo.toml
crates/image-types/src/: lib.rs
crates/inflight/: Cargo.toml
crates/libapi/: Cargo.toml
crates/libapi/src/: lib.rs
crates/libapi/src/impls/: mod.rs
crates/libcdn/: Cargo.toml
crates/libcdn/src/: lib.rs
crates/libcdn/src/impls/: mod.rs
crates/libclap/: Cargo.toml
crates/libcompress/: Cargo.toml
crates/libconfig/: Cargo.toml
crates/libconfig/src/: lib.rs
crates/libconfig/src/.dylo/: spec.rs
crates/libcub/: Cargo.toml
crates/libcub/src/: lib.rs
crates/libcub/src/.dylo/: spec.rs
crates/libcub/src/impls/: graceful_shutdown.rs  mod.rs  mom_event_handler.rs  node_metadata.rs
crates/libcub/src/impls/cdn/: mod.rs
crates/libcub/src/impls/credentials/: mod.rs
crates/libcub/src/impls/cub_req/: mod.rs
crates/libcub/src/impls/host_extract/: mod.rs
crates/libcub/src/impls/layers/: compression.rs  mod.rs
crates/libcub/src/impls/reply/: mod.rs
crates/libcub/src/impls/types/: mod.rs
crates/libcub/src/impls/vite/: mod.rs  vite.config.js
crates/libcub/src/impls/web/: login.rs  mod.rs  tags.rs
crates/libcub/src/impls/web/api/: comments.rs  link_preview.rs  mod.rs  update_userinfo.rs
crates/libcub/src/impls/web/internal_api/: deploy.rs  download_url.rs  edit_asset.rs  livereload.js  media_upload.rs  mod.rs  open_in_editor.rs  validation.rs  ws.rs
crates/libdoctor/: Cargo.toml
crates/liberrhandling/: Cargo.toml
crates/liberrhandling/src/: lib.rs
crates/libfs/: Cargo.toml
crates/libfs/src/: lib.rs
crates/libfs/src/.dylo/: spec.rs
crates/libgithub/: Cargo.toml
crates/libgithub/src/: lib.rs
crates/libgithub/src/impls/: github_sponsors.graphql  mod.rs
crates/libhighlight/: Cargo.toml
crates/libhighlight/src/: lib.rs
crates/libhome/: Cargo.toml
crates/libhtmlrewrite/: Cargo.toml
crates/libhttpclient/: Cargo.toml
crates/libhttpclient/src/: lib.rs
crates/libimage/: Cargo.toml
crates/libimage/src/: lib.rs
crates/liblightningcss/: Cargo.toml
crates/libmarkdown/: Cargo.toml
crates/libmarkdown/src/: impls.rs  lib.rs  spec.rs
crates/libmarkdown/src/impls/: argparse.rs
crates/libmarkdown/src/snapshots/: mod_markdown__impls__tests__correctness_with_types-2.snap  mod_markdown__impls__tests__home_is_very_opinionated.snap  mod_markdown__impls__tests__markdown_1-3.snap  mod_markdown__impls__tests__markdown_1-4.snap  mod_markdown__impls__tests__shortblocks-2.snap  mod_markdown__tests__correctness_with_types.snap  mod_markdown__tests__markdown_1-2.snap  mod_markdown__tests__markdown_1-3.snap  mod_markdown__tests__markdown_1-4.snap  mod_markdown__tests__markdown_1.snap  mod_markdown__tests__markdown_with_code_block-2.snap  mod_markdown__tests__markdown_with_code_block.snap  mod_markdown__tests__plaintext_links.snap  mod_markdown__tests__process_markdown_to_writer.snap  mod_markdown__tests__shortblocks-2.snap
crates/libmarkdown/src/testdata/: correctness-with-types.md
crates/libmedia/: Cargo.toml
crates/libmedia/src/: impls.rs  lib.rs
crates/libmom/: Cargo.toml
crates/libmom/src/: impls.rs  lib.rs
crates/libmom/src/.dylo/: spec.rs
crates/libmom/src/impls/: db.rs  deriver.rs  endpoints.rs  ffmpeg.rs  ffmpeg_stream.rs  site.rs  sponsors.rs
crates/libmom/src/impls/db/migrations/: m0004_github_credentials.rs  m0007_objectstore_entries.rs  m0008_objectstore_entries_rename.rs
crates/libmom/src/impls/endpoints/: tenant.rs  tenant_extractor.rs
crates/libmom/src/impls/endpoints/tenant/: derive.rs  media.rs
crates/libmomclient/: Cargo.toml
crates/libmomclient/src/: lib.rs
crates/libobjectstore/: Cargo.toml
crates/libobjectstore/src/: lib.rs
crates/libpatreon/: Cargo.toml
crates/libpatreon/src/: lib.rs
crates/libreddit/: Cargo.toml
crates/libreddit/src/: lib.rs
crates/librevision/: Cargo.toml
crates/librevision/src/: lib.rs
crates/librevision/src/.dylo/: spec.rs
crates/librevision/src/impls/: load.rs  make.rs  mod.rs  watch.rs
crates/librevision/src/impls/make/: media_props_cache.rs
crates/libsearch/: Cargo.toml
crates/libsearch/src/: lib.rs
crates/libsvg/: Cargo.toml
crates/libsvg/src/: char_usage.rs  impls.rs  lib.rs
crates/libsvg/src/snapshots/: mod_svg__impls__test__inject_font_faces.snap
crates/libsvg/src/testdata/: drawio-bold-test-style.css
docs/: .gitignore  README.md  home.json  package.json  pnpm-lock.yaml
(+321 files in other folders)
