[workspace]
members = ["crates/*"]
exclude = []
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.86.0"
version = "0.1.0"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "Proprietary"
repository = "https://github.com/bearcove/home"
homepage = "https://home.bearcove.eu"
documentation = "https://home.bearcove.eu"
description = "A cozy authoring environment"
keywords = []
categories = []

[profile.dev]
debug = 1
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = 1
lto = "off"
split-debuginfo = "unpacked"

[workspace.dependencies]
tokio = { version = "=1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
merde = { version = "10.0.7", features = ["full"] }
rusqlite = { version = "0.35.0", default-features = false, features = ["time"] }
eyre = "0.6.12"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
minijinja = { version = "2.9.0" }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls-native-roots",
] }
facet = { version = "0.18.1", features = ["camino"] }
facet-core = { version = "0.18.0" }
facet-json = { version = "0.18.1" }
facet-pretty = { version = "0.18.1" }
