[package]
name = "rubicon-exports"
version = "0.1.1"
edition = "2024"
description = "See https://github.com/bearcove/rubicon"

[lib]
crate-type = ["dylib"]

[dependencies]
eyre = { version = "0.6.12", default-features = false }
tokio = { version = "1.44.1", features = ["full"] }
tracing = { version = "0.1.40", features = [] }
rubicon = { version = "3.4.9", features = ["export-globals"] }
dylo-runtime = { version = "2.5.1" }
