[package]
name = "conflux"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
camino = { version = "1.1.9" }
bytes = "1.10.1"
merde = { workspace = true, features = ["time"] }
time = "0.3.41"
minijinja = { workspace = true }
closest = { path = "../closest" }
config = { path = "../config" }
plait = { path = "../plait" }
image = { path = "../image" }
content-type = { path = "../content-type" }
credentials = { path = "../credentials" }
url = "2.5.4"
serde = { version = "1.0" }
rusqlite = { workspace = true }
objectstore = { path = "../objectstore" }
noteyre = { version = "0.1.0", path = "../noteyre" }
facet.workspace = true

[features]
default = []
