[package]
name = "conflux"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
camino = { version = "1.1.9" }
bytes = "1.10.1"
merde = { workspace = true, features = ["time"] }
time = "0.3.41"
minijinja = { workspace = true }
closest = { path = "../closest" }
libconfig = { path = "../libconfig" }
plait = { path = "../plait" }
libimage = { path = "../libimage" }
content-type = { path = "../content-type" }
credentials = { path = "../credentials" }
url = "2.5.4"
serde = { version = "1.0" }
rusqlite = { workspace = true }
libobjectstore = { path = "../libobjectstore" }
facet.workspace = true
image-types = { version = "0.1.0", path = "../image-types" }
objectstore-types = { version = "0.1.0", path = "../objectstore-types" }
eyre.workspace = true
config-types = { version = "0.1.0", path = "../config-types" }

[features]
default = []
