[package]
name = "credentials"
version = "0.1.0"
edition = "2024"

[dependencies]
merde = { workspace = true, features = ["time"] }
time = "0.3.41"
serde = { workspace = true, optional = true, features = ["derive"] }
noteyre = { version = "0.1.0", path = "../noteyre" }

[features]
serde = ["dep:serde"]
