[package]
name = "derivations"
version = "0.1.0"
edition = "2024"

[dependencies]
closest = { version = "0.1.0", path = "../closest" }
conflux = { version = "0.1.0", path = "../conflux" }
content-type = { version = "0.1.0", path = "../content-type" }
libobjectstore = { version = "0.1.0", path = "../libobjectstore" }
seahash = "4.1.0"
tokio.workspace = true
objectstore-types = { version = "0.1.0", path = "../objectstore-types" }
image-types = { version = "0.1.0", path = "../image-types" }
config-types = { version = "0.1.0", path = "../config-types" }
eyre.workspace = true
