[package]
name = "home"
edition = "2024"
version = "4.0.0"

[[bin]]
name = "home"
path = "src/main.rs"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.44.1", features = ["full"] }
libc = "0.2.171"
errhandling = { version = "0.1.0", path = "../errhandling" }
libconfig = { version = "0.1.0", path = "../libconfig" }
libclap = { path = "../libclap" }
libterm = { path = "../libterm" }
cub = { path = "../cub" }
mom = { path = "../mom" }
tracingsub = { path = "../tracingsub" }
serde_json = "1.0.140"
fastrand = "2.3.0"
camino = "1.1.9"
http = "1.3.1"
doctor = { version = "0.1.0", path = "../doctor" }
rubicon-imports = { version = "0.1.0", path = "../rubicon-imports" }
owo-colors = "4.2.0"
tracing.workspace = true

[features]
minijinja = []
