[package]
name = "home"
edition = "2024"
version = "4.0.0"

[[bin]]
name = "home"
path = "src/main.rs"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.44.1", features = ["full"] }
libc = "0.2.171"
liberrhandling = { version = "0.1.0", path = "../liberrhandling" }
libconfig = { version = "0.1.0", path = "../libconfig" }
libclap = { path = "../libclap" }
libterm = { path = "../libterm" }
libcub = { path = "../libcub" }
libmom = { path = "../libmom" }
libtracingsub = { path = "../libtracingsub" }
serde_json = "1.0.140"
fastrand = "2.3.0"
camino = "1.1.9"
http = "1.3.1"
libdoctor = { version = "0.1.0", path = "../libdoctor" }
owo-colors = "4.2.0"
tracing.workspace = true

[features]
minijinja = []
