[package]
name = "image-types"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
content-type = { version = "0.1.0", path = "../content-type" }
eyre.workspace = true
merde.workspace = true
ordered-float = "5.0.0"
