[package]
name = "libapi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
url = { version = "2.5.4" }
reddit = { version = "0.1.0", path = "../reddit" }
tracing = { workspace = true }

# core dependencies
hattip = { version = "0.1.0", path = "../hattip" }
cub-types = { version = "0.1.0", path = "../cub-types" }
dylo-runtime = "2.5.0"

[features]
default = ["impl"]
impl = []
