[package]
name = "libapi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
url = { version = "2.5.4" }
libreddit = { version = "0.1.0", path = "../libreddit" }
tracing = { workspace = true }

# core dependencies
hattip = { version = "0.1.0", path = "../hattip" }
cub-types = { version = "0.1.0", path = "../cub-types" }
autotrait = "0.1.11"

[features]
default = ["impl"]
impl = []
