[package]
name = "libcdn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
bytesize = { version = "2.0.1" }
config = { version = "0.1.0", path = "../config" }
conflux = { version = "0.1.0", path = "../conflux" }
content-type = { version = "0.1.0", path = "../content-type" }
derivations = { version = "0.1.0", path = "../derivations" }
http-range = { version = "0.1.5" }
libhttpclient = { version = "0.1.0", path = "../../libs/libhttpclient" }
mom = { version = "0.1.0", path = "../mom" }
tokio = { workspace = true }
tracing = { workspace = true }
websock = { version = "0.1.0", path = "../websock" }

# core dependencies
hattip = { version = "0.1.0", path = "../hattip" }
cub-types = { version = "0.1.0", path = "../cub-types" }
futures-core = "0.3.31"

[features]
default = ["impl"]
impl = []
