[package]
name = "libcdn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
bytesize = { version = "2.0.1" }
libconfig = { version = "0.1.0", path = "../libconfig" }
conflux = { version = "0.1.0", path = "../../crates/conflux" }
content-type = { version = "0.1.0", path = "../../crates/content-type" }
derivations = { version = "0.1.0", path = "../../crates/derivations" }
http-range = { version = "0.1.5" }
libhttpclient = { version = "0.1.0", path = "../libhttpclient" }
libmom = { version = "0.1.0", path = "../libmom" }
tokio = { workspace = true }
tracing = { workspace = true }
libwebsock = { version = "0.1.0", path = "../libwebsock" }
hattip = { version = "0.1.0", path = "../../crates/hattip" }
libcub = { version = "0.1.0", path = "../libcub" }
futures-core = "0.3.31"
