[package]
name = "libconfig"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
fs-err = { version = "2.11.0" }
dotenvy = { version = "0.15.7" }
figment = { version = "0.10.19", features = ["env", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
plait = { path = "../../crates/plait" }
merde = { workspace = true, features = ["camino"] }
base64 = "0.22.1"
serde_json = { version = "1.0.140" }
owo-colors = { version = "4.2.0" }
facet.workspace = true
facet-json = "0.11.1"
facet-pretty = "0.13.0"
