[package]
name = "libconfig"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
fs-err = { version = "3.0.0" }
serde_json = { version = "1.0.140" }
owo-colors = { version = "4.2.0" }
facet-json.workspace = true
facet-pretty.workspace = true
autotrait = "0.1.11"
eyre.workspace = true
config-types = { version = "0.1.0", path = "../config-types" }
