[package]
name = "libcub"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
dylo.workspace = true
dylo-runtime = "2.5.0"
noteyre = { path = "../noteyre" }
camino = { version = "1.1.9" }

# impl deps — these are only used in `mod-cub`
merde = { workspace = true, features = ["yaml"] }
mom = { path = "../mom" }
conflux = { path = "../conflux" }
momclient = { path = "../momclient" }
axum = { version = "0.7.9", default-features = false, features = [
    "http1",
    "tokio",
    "ws",
    "query",
    "macros",
    "form",
] }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4.13", features = ["steer"] }
tower-cookies = { version = "0.10.0", features = ["private"] }
tracing = { workspace = true }
eyre = { workspace = true }
time = { version = "0.3.41", features = ["formatting"] }
parking_lot = { version = "0.12.3" }
url = { version = "2.5.4", features = ["serde"] }
derivations = { path = "../derivations" }
search = { path = "../search" }
template = { path = "../template" }
objectstore = { path = "../objectstore" }
term = { path = "../term" }
nix = { version = "0.29.0", features = ["process", "signal"] }
http = { version = "1.3.1" }
http-body-util = { version = "0.1.3" }
compress = { path = "../compress" }
pin-project-lite = { version = "0.2.16" }
rand = { version = "0.8.5" }
strsim = { version = "0.11.1" }
webpage = { path = "../webpage" }
flume = { version = "0.11.1" }
bytesize = { version = "1.3.2" }
image = { path = "../image" }
tempfile = { version = "3.19.1" }
uffmpeg = { path = "../uffmpeg" }
libhttpclient = { version = "0.1.0", path = "../../libs/libhttpclient" }
patreon = { path = "../patreon" }
serde = { workspace = true, features = ["derive"] }
content-type = { path = "../content-type" }
itertools = { version = "0.14.0" }
closest = { version = "0.1.0", path = "../closest" }
ulid = { version = "1.2.1" }
errhandling = { version = "0.1.0", path = "../errhandling" }
credentials = { path = "../credentials" }
libc = { version = "0.2.171" }
regex = { version = "1.11.1" }
strip-ansi-escapes = { version = "0.2.1" }
cdn = { version = "0.1.0", path = "../cdn" }
hattip = { version = "0.1.0", path = "../hattip" }
api = { version = "0.1.0", path = "../api" }
websock = { version = "0.1.0", path = "../websock" }
hyper = { version = "1.6.0" }
futures-core = "0.3.31"
cub-types = { version = "0.1.0", path = "../cub-types" }
futures-util = { version = "0.3.31" }
tempdir = { version = "0.3.7" }
revision = { version = "0.1.0", path = "../revision" }
config = { version = "0.1.0", path = "../config" }
open = { version = "5.3.2" }
libgithub = { version = "0.1.0", path = "../../libs/libgithub" }

# the `mod-cub` crate is built with `impl` enabled, which brings in the impl-only deps
[features]
default = ["impl"]
impl = []
