[package]
name = "libfs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
dylo.workspace = true
eyre = { version = "0.6.12", default-features = false }
camino = { version = "1.1.9" }

# impl dependencies
ignore = { version = "0.4.23" }
notify = { version = "6.1.1" }
dylo-runtime = "2.5.0"

[features]
default = ["impl"]
impl = []
