[package]
name = "libfs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
eyre = { version = "0.6.12", default-features = false }
camino = { version = "1.1.9" }
ignore = { version = "0.4.23" }
notify = { version = "8.0.0" }
autotrait = "0.1.11"

[features]
default = []
