[package]
name = "libhighlight"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
# impl dependencies
dumbcache = { path = "../../crates/dumbcache" }
tracing = { version = "0.1.41" }
tree-sitter-collection = { git = "https://github.com/bearcove/home-tree-sitter" }
nerdfonts = { path = "../nerdfonts" }
autotrait = "0.1.6"
