[package]
name = "libimage"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]

# impl deps
image = { version = "0.25.6", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "avif",
    "avif-native",
] }
ravif = { version = "0.11.11" }
rgb = { version = "0.8.50" }
webp = { version = "0.3.0" }
jxl-oxide = { version = "0.8.1" }
tracing = { version = "0.1.41" }
content-type = { path = "../content-type" }
merde = { workspace = true, features = ["time"] }
jpegxl-rs = { version = "0.11.2", features = ["vendored"] }
ordered-float = "4.6.0"
tempfile = { version = "3.19.1" }
fs-err = { version = "3.1.0" }
num_cpus = { version = "1.16.0" }
autotrait = "0.1.8"
eyre.workspace = true
image-types = { version = "0.1.0", path = "../image-types" }

[features]
default = ["impl"]
impl = []
