[package]
name = "libmom"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
camino = { version = "1.1.9" }
conflux = { path = "../conflux" }
merde = { workspace = true, features = ["json", "rusqlite", "serde", "camino"] }
config = { path = "../config" }
errhandling = { path = "../errhandling" }
objectstore = { path = "../objectstore" }
term = { path = "../term" }
credentials = { path = "../credentials" }
patreon = { path = "../patreon" }
content-type = { path = "../content-type" }
derivations = { version = "0.1.0", path = "../derivations" }

# impl deps
async-trait = { version = "0.1.88" }
axum = { version = "0.7.9", default-features = false, features = [
    "http1",
    "tokio",
    "ws",
    "query",
    "macros",
] }
eyre = { version = "0.6.12", default-features = false }
futures-util = { version = "0.3.31" }
inflight = { path = "../inflight" }
parking_lot = { version = "0.12.3" }
r2d2 = { version = "0.8.10" }
r2d2_sqlite = { version = "0.25.0" }
rusqlite = { workspace = true, default-features = false, features = ["time"] }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = { version = "0.1.41" }
url = { version = "2.5.4" }
tempfile = { version = "3.19.1" }
ffmpeg-sidecar = { version = "2.0.5" }
nix = { version = "0.29.0", features = ["process", "signal"] }
tokio-stream = { version = "0.1.17" }
image = { version = "0.1.0", path = "../image" }
uffmpeg = { version = "0.1.0", path = "../uffmpeg" }
svg = { version = "0.1.0", path = "../svg" }
bytesize = { version = "1.3.2" }
noteyre = { version = "0.1.0", path = "../noteyre" }
futures-core = "0.3.31"
owo-colors = "4.2.0"
itertools = "0.14.0"
libgithub = { version = "0.1.0", path = "../../libs/libgithub" }
libhttpclient = { version = "0.1.0", path = "../../libs/libhttpclient" }

[features]
default = ["impl"]
impl = []
