[package]
name = "libmomclient"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
conflux = { path = "../../crates/conflux" }

# impl deps
merde = { workspace = true, features = ["json"] }
rand = { version = "0.8.5" }
tokio = { workspace = true, features = ["time"] }
tracing = { version = "0.1.41" }
credentials = { path = "../../crates/credentials" }
libpatreon = { path = "../libpatreon" }
bytes = "1.10.1"
libwebsock = { path = "../libwebsock" }
futures-core = "0.3.31"
libgithub = { version = "0.1.0", path = "../libgithub" }
libhttpclient = { version = "0.1.0", path = "../libhttpclient" }
config-types = { version = "0.1.0", path = "../config-types" }
eyre.workspace = true
objectstore-types = { version = "0.1.0", path = "../objectstore-types" }
autotrait = "0.1.11"
mom-types = { version = "0.1.0", path = "../mom-types" }
