[package]
name = "libobjectstore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
futures-util = "0.3.31"
bytes = "1"
rubicon = "3.4.9"

# impl deps
object_store = { version = "0.10.2", features = ["aws"] }
tracing = { version = "0.1.41" }
tokio = { version = "1.44" }
libconfig = { path = "../libconfig" }
merde.workspace = true
rusqlite = { workspace = true }
plait = { path = "../plait" }
futures-core = "0.3.31"
facet.workspace = true
autotrait = "0.1.8"
