[package]
name = "libreddit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
libconfig = { path = "../libconfig" }
libhttpclient = { path = "../libhttpclient" }
merde = { workspace = true }
tracing = { version = "0.1" }
url = { version = "2.5.4" }
futures-core = "0.3.31"
eyre.workspace = true
autotrait = "0.1.7"
